force-app/main/default/objects/Scientist__c/Scientist__c.object-meta.xml
<CustomObject>
    <label>Scientist</label>
    <nameField>
        <label>Scientist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scientists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>