force-app/main/default/objects/Scientist__c/fields/ISRO__c.field-meta.xml
<CustomField>
    <fullName>ISRO__c</fullName>
    <label>ISRO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>