force-app/main/default/objects/Scientist__c/fields/NASA__c.field-meta.xml
<CustomField>
    <fullName>NASA__c</fullName>
    <label>NASA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>