force-app/main/default/objects/Scientist__c/fields/Scientist_URL__c.field-meta.xml
<CustomField>
    <fullName>Scientist_URL__c</fullName>
    <label>Scientist_URL</label>
    <type>Url</type>
</CustomField>